--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
             <div id="crypto">
                 <div id="crypto-top"></div>
             </div>
-            <p>Weather</p>
+            <div id="weather"></div>
         </div>
-
-        <h1 class="time"> TIME HERE </h1>\
-
+        <h1 id="time"> </h1>
         <p id="author"></p>
     </main>
     <script src="index.js"></script>
