--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             </div>
             <div id="weather"></div>
         </div>
-        <h1 id="time"> </h1>
+        <h1 id="time" class="time"> </h1>
         <p id="author"></p>
     </main>
     <script src="index.js"></script>
